--- a/TaquillaITH/Views/TicketSale/Step1.cshtml
+++ b/TaquillaITH/Views/TicketSale/Step1.cshtml
@@ -121,7 +121,7 @@
     var genre = "";
     var movie = "";
     var payment = 0;
-    var pointsUsed;
+    var pointsUsed = 0;
     var credit = 0;
     var ticketType;
     var usedCredit = true;
