--- a/TaquillaITH/Views/TicketSale/Step1.cshtml
+++ b/TaquillaITH/Views/TicketSale/Step1.cshtml
@@ -419,10 +419,10 @@
             };
         }
         else{
-            var cardNumber = 1234567890123456;
-            var mes = 01;
-            var ano = 21;
-            var cvv = 333;
+            var cardNumber = "1234567890123456";
+            var mes = "01";
+            var ano = "21";
+            var cvv = "333";
 
             for (var item in seatsList) {
                 var wea = {
