Finalex minor fixes

--- a/TaquillaITH/Views/TicketSale/_Step5.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step5.cshtml
@@ -4,10 +4,10 @@
             <p><b>Película: </b><span id="movie"></span></p>
             <p><b>Horario: </b><span id="runningTime"></span></p>
             <p><b>Tipo de boleto: </b><span id="ticketType"></span></p>
-            <p><b>Efectivo: </b><span id="cash"></span></p>
-            <p><b>Credito: </b><span id="credit"></span></p>
+            <p><b>Efectivo: </b>$<span id="cash"></span></p>
+            <p><b>Credito: </b>$<span id="credit"></span></p>
             <p><b>Puntos: </b><span id="pointsTicket"></span></p>
-            <p><b>Total: </b><span id="total"></span></p>
+            <p><b>Total: </b>$<span id="total"></span></p>
             <p>------</p>
             <br />
             <br />
