--- a/TaquillaITH/Views/TicketSale/_Step4.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step4.cshtml
@@ -3,7 +3,7 @@
     <div id="PaymentCard">
         <blockquote class="blockquote mb-0 align-items-center">
           <div id="creditBlock">
-            <p>Ingrese su número de membresía</p>
+            <p>Ingrese su número de tarjeta</p>
             <input type="text" class="form-control col-12 col-xl-12" id="cardNumber" placeholder="Numero de Tarjeta" maxlength="16">
             <br />
             <input type="text" class="form-control col-12 col-xl-12" id="mes" placeholder="MM" maxlength="2">
